# dmel_data

./: .gitignore  README.md  pyproject.toml  requirements.txt
annotate_vcf/: README.md  annotation_class.py  config.ini  config_ini_parser.py  fix_mutational_context.py  get_short_introns_from_bed.py  implementations.py  mutational_context_func.py  pipeline_to_annotate_snps_in_refaltcount_vcf_format.ipynb  pipeline_to_annotate_snps_in_standard_vcf_format.ipynb  pipeline_to_annotate_snps_in_standard_vcf_format_dpgp3.ipynb  pipeline_to_annotate_vcf.py  process_vcf_func.py  process_vcf_lines_utils.py  simplify_snpeff.py  vcf_to_tsv.py  vcf_to_tsv_func.py  vcf_to_tsv_implementations.py  vcf_to_tsv_utils.py
create_sfss/: README.md  mutational_context.py  mutational_context_utils.py  pipeline_to_process_snps.ipynb  pipeline_to_process_snps_with_downsampling.ipynb  pipeline_to_process_snps_with_downsampling_dgrp2.ipynb  pipeline_to_process_snps_with_downsampling_dpgp3.ipynb  pipeline_to_process_snps_with_downsampling_rooted_dpgp3.ipynb  pipeline_to_process_snps_with_imputation.ipynb  pipeline_to_process_snps_with_imputation_dgrp2.ipynb  pipeline_to_process_snps_with_imputation_dpgp3.ipynb  pipeline_to_process_snps_with_random_sampling_dgrp2.ipynb  pipeline_to_process_snps_with_random_sampling_dpgp3.ipynb  pipeline_to_process_snps_with_random_sampling_rooted_dpgp3.ipynb  sfs_manipulation.py  sfs_utils.py  snp_utils.py  test_create_sfs_dict.py  test_create_snp_total_counts_dict.py  test_create_unfolded_sfs_from_df.py  test_create_unfolded_sfs_from_snp_dict.py  test_fold_sfs.py  (+4 more)
(+91 files in other folders)
