[tool.poetry]
name = "dmel_data"
version = "0.1.0"
description = "Package to work with Dmel data"
authors = ["Vitor Pavinato <vitor.pavi@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
numpy = "^1.26.4"
pandas = "^2.2.2"
pytest = "^8.2.1"
scipy = "^1.13.1"
jupyterlab = "^4.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
package-mode = false
